--- a/relogioDigital/styles.css
+++ b/relogioDigital/styles.css
@@ -1,6 +1,19 @@
 * {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    
+    box-sizing: border-box;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .clock-container {
+        width: fit-content;
+        flex-wrap: wrap;
+    }
+
+    .clock-tiles {
+        max-width: 50%;
+    }
+
 }
 
 body {
@@ -23,9 +36,8 @@ body {
     max-height: fit-content;
     position: fixed;
     inset: 0px;
-    
-    
-   
+
+
 }
 
 .clock-tiles {
@@ -37,8 +49,8 @@ body {
     box-shadow: 0.5rem;
     width: 100%;
     max-height: 100%;
-    box-sizing: border-box;
     box-shadow: 4px 4px 6px rgb(0, 0, 0, 0.5);
+
 }
 
 p {
